BLE Lab 3/BLE Lab 3.cydsn/CortexM0/ARM_GCC_484/Debug/BUILD.log
--------------- Build Started: 07/01/2015 14:38:21 Project: BLE Lab 3, Configuration: ARM GCC 4.8.4 Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_484\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -O0 -c .\main.c -o .\CortexM0\ARM_GCC_484\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_484\Debug/BLEApplications.lst -g -D DEBUG -Wall -ffunction-sections -O0 -c .\BLEApplications.c -o .\CortexM0\ARM_GCC_484\Debug\BLEApplications.o
In file included from .\BLEApplications.c:45:0:
.\BLEApplications.c: In function 'CustomEventHandler':
./BLEApplications.h:56:42: error: 'CYBLE_CAPSENSE_SERVICE_CAPSENSE_SLIDER_CHARACTERISTIC_CHAR_INDEX' undeclared (first use in this function)
 #define CAPSENSE_SLIDER_CHAR_INDEX      (CYBLE_CAPSENSE_SERVICE_CAPSENSE_SLIDER_CHARACTERISTIC_CHAR_INDEX)
                                          ^
.\BLEApplications.c:178:34: note: in expansion of macro 'CAPSENSE_SLIDER_CHAR_INDEX'
                customServiceInfo[CAPSENSE_SLIDER_CHAR_INDEX].
                                  ^
./BLEApplications.h:56:42: note: each undeclared identifier is reported only once for each function it appears in
 #define CAPSENSE_SLIDER_CHAR_INDEX      (CYBLE_CAPSENSE_SERVICE_CAPSENSE_SLIDER_CHARACTERISTIC_CHAR_INDEX)
                                          ^
.\BLEApplications.c:178:34: note: in expansion of macro 'CAPSENSE_SLIDER_CHAR_INDEX'
                customServiceInfo[CAPSENSE_SLIDER_CHAR_INDEX].
                                  ^
In file included from .\BLEApplications.c:45:0:
./BLEApplications.h:63:37: error: 'CYBLE_CAPSENSE_SERVICE_CAPSENSE_SLIDER_CHARACTERISTIC_CLIENT_CHARACTERISTIC_CONFIGURATION_DESC_INDEX' undeclared (first use in this function)
 #define CAPSENSE_SLIDER_CCC_INDEX  (CYBLE_CAPSENSE_SERVICE_CAPSENSE_SLIDER_CHARACTERISTIC_CLIENT_CHARACTERISTIC_CONFIGURATION_DESC_INDEX)
                                     ^
.\BLEApplications.c:179:54: note: in expansion of macro 'CAPSENSE_SLIDER_CCC_INDEX'
                         customServiceCharDescriptors[CAPSENSE_SLIDER_CCC_INDEX])
                                                      ^
In file included from .\BLEApplications.c:45:0:
./BLEApplications.h:61:33: error: 'CYBLE_CAPSENSE_SERVICE_CAPSENSE_SLIDER_CHARACTERISTIC_CLIENT_CHARACTERISTIC_CONFIGURATION_DESC_HANDLE' undeclared (first use in this function)
 #define CAPSENSE_CCC_HANDLE    (CYBLE_CAPSENSE_SERVICE_CAPSENSE_SLIDER_CHARACTERISTIC_CLIENT_CHARACTERISTIC_CONFIGURATION_DESC_HANDLE)
                                 ^
.\BLEApplications.c:195:59: note: in expansion of macro 'CAPSENSE_CCC_HANDLE'
               CapSenseNotificationCCCDhandle.attrHandle = CAPSENSE_CCC_HANDLE;
                                                           ^
.\BLEApplications.c: In function 'SendCapSenseNotification':
.\BLEApplications.c:239:42: error: 'CYBLE_CAPSENSE_SERVICE_CAPSENSE_SLIDER_CHARACTERISTIC_CHAR_HANDLE' undeclared (first use in this function)
  CapSensenotificationHandle.attrHandle = CYBLE_CAPSENSE_SERVICE_CAPSENSE_SLIDER_CHARACTERISTIC_CHAR_HANDLE;    
                                          ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 07/01/2015 14:38:22 ---------------
